# Eqar_MVP

./: .env.example  .gitignore  CLAUDE.md  CODEX.md  README.md  package-lock.json  package.json
apps/api/: README.md  env.example  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: chat.py  health.py
apps/api/app/auth/: dependencies.py
apps/api/app/core/: settings.py
apps/api/app/country_packs/: __init__.py  base.py
apps/api/app/country_packs/ca/: __init__.py  ontario.py
apps/api/app/llm/: base.py  openai_provider.py
apps/api/app/tools/: __init__.py  calculators.py  registry.py
apps/api/tests/: test_calculators.py
apps/web/: .gitignore  README.md  env.example  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ChatPanel.tsx  DashboardShell.tsx  DocumentStatusPanel.tsx  WorkflowCards.tsx  dashboard.module.css
apps/web/lib/: env.ts
docs/: README.md
docs/agents/: Agent_Context.md  CLAUDE.md  CODEX.md  design.md
docs/planning/: DATA_AND_COMPLIANCE.md  PLAN.md  TECHNICAL_ARCHITECTURE.md
infra/: README.md  env.example
infra/supabase/: README.md
infra/supabase/migrations/: 0001_foundation.sql
