[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eqar-api"
version = "0.1.0"
description = "FastAPI backend scaffold for Eqar, a Canada-first AI real-estate co-pilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openai>=1.50,<2.0",
  "pydantic-settings>=2.4,<3.0",
  "PyJWT>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

